--- a/elara.cabal
+++ b/elara.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Elara.AST.Annotated
       Elara.AST.Frontend
       Elara.AST.Frontend.Pretty.Unlocated
       Elara.AST.Frontend.Unlocated
@@ -62,7 +63,8 @@ library
       DataKinds
       DeriveFunctor
       TypeApplications
-  ghc-options: -Wall -Werror=incomplete-patterns -Wredundant-constraints -Wunused-imports -Wunused-foralls -Wmissing-fields -Winaccessible-code -Wmissed-specialisations
+      Strict
+  ghc-options: -Wall -Werror=incomplete-patterns -Werror=incomplete-uni-patterns -Wredundant-constraints -Wunused-imports -Wunused-foralls -Wmissing-fields -Winaccessible-code -Wincomplete-record-updates -Wpartial-fields -Werror=missing-home-modules -Widentities -Wmonomorphism-restriction
   build-depends:
       algebraic-graphs
     , base-noprelude >=4.7 && <5
@@ -98,7 +100,8 @@ executable elara
       DataKinds
       DeriveFunctor
       TypeApplications
-  ghc-options: -Wall -Werror=incomplete-patterns -Wredundant-constraints -Wunused-imports -Wunused-foralls -Wmissing-fields -Winaccessible-code -Wmissed-specialisations -threaded
+      Strict
+  ghc-options: -Wall -Werror=incomplete-patterns -Werror=incomplete-uni-patterns -Wredundant-constraints -Wunused-imports -Wunused-foralls -Wmissing-fields -Winaccessible-code -Wincomplete-record-updates -Wpartial-fields -Werror=missing-home-modules -Widentities -Wmonomorphism-restriction -threaded
   build-depends:
       algebraic-graphs
     , base-noprelude >=4.7 && <5
@@ -143,8 +146,9 @@ test-suite elara-test
       DataKinds
       DeriveFunctor
       TypeApplications
+      Strict
       QuasiQuotes
-  ghc-options: -Wall -Werror=incomplete-patterns -Wredundant-constraints -Wunused-imports -Wunused-foralls -Wmissing-fields -Winaccessible-code -Wmissed-specialisations -threaded -O0
+  ghc-options: -Wall -Werror=incomplete-patterns -Werror=incomplete-uni-patterns -Wredundant-constraints -Wunused-imports -Wunused-foralls -Wmissing-fields -Winaccessible-code -Wincomplete-record-updates -Wpartial-fields -Werror=missing-home-modules -Widentities -Wmonomorphism-restriction -threaded -O0
   build-depends:
       HUnit
     , QuickCheck
