add HOT ass error handling

--- a/elara.cabal
+++ b/elara.cabal
@@ -40,6 +40,8 @@ library
       Elara.Parse
       Elara.Parse.Combinators
       Elara.Parse.Declaration
+      Elara.Parse.Error
+      Elara.Parse.Error.Internal
       Elara.Parse.Expression
       Elara.Parse.Indents
       Elara.Parse.Literal
