make tests compile

--- a/package.yaml
+++ b/package.yaml
@@ -21,7 +21,7 @@ dependencies:
   - parsers
   - parser-combinators
   - pretty-simple
-  - diagnose # TODO
+  - diagnose
   - pretty
   - polysemy
   - polysemy-plugin
