remove redundant library

--- a/elara.cabal
+++ b/elara.cabal
@@ -74,10 +74,10 @@ library
       base-noprelude >=4.7 && <5
     , containers
     , diagnose
+    , headed-megaparsec
     , lens
     , megaparsec
     , parser-combinators
-    , parsers
     , polysemy
     , polysemy-plugin
     , pretty
@@ -109,10 +109,10 @@ executable elara
     , containers
     , diagnose
     , elara
+    , headed-megaparsec
     , lens
     , megaparsec
     , parser-combinators
-    , parsers
     , polysemy
     , polysemy-plugin
     , pretty
@@ -157,13 +157,13 @@ test-suite elara-test
     , containers
     , diagnose
     , elara
+    , headed-megaparsec
     , hspec ==2.*
     , hspec-megaparsec
     , lens
     , megaparsec
     , neat-interpolation
     , parser-combinators
-    , parsers
     , polysemy
     , polysemy-plugin
     , pretty
