--- a/package.yaml
+++ b/package.yaml
@@ -18,7 +18,7 @@ dependencies:
   - lens
   - containers
   - megaparsec
-  - parsers
+  - headed-megaparsec
   - parser-combinators
   - pretty-simple
   - diagnose
