--- a/package.yaml
+++ b/package.yaml
@@ -28,6 +28,7 @@ dependencies:
 
 ghc-options:
 - -Wall
+# - -Weverything
 - -Werror=incomplete-patterns
 - -Werror=incomplete-uni-patterns
 - -Wredundant-constraints
