--- a/elara.cabal
+++ b/elara.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Data.Functor.Extra
       Elara.Annotate
       Elara.Annotate.Shunt
       Elara.AST.Annotated
@@ -36,7 +37,6 @@ library
       Elara.AST.Name
       Elara.AST.Region
       Elara.AST.Select
-      Elara.Data.Type
       Elara.Error
       Elara.Error.Codes
       Elara.Parse
