--- a/package.yaml
+++ b/package.yaml
@@ -44,6 +44,7 @@ ghc-options:
 - -Wmonomorphism-restriction
 - -fplugin=Polysemy.Plugin
 - -optP-Wno-nonportable-include-path # Fix annoying error on macOS
+- -feager-blackholing
 
 
 default-extensions:
