--- a/elara.cabal
+++ b/elara.cabal
@@ -56,6 +56,7 @@ library
       Elara.Parse.Names
       Elara.Parse.Pattern
       Elara.Parse.Primitives
+      Elara.Parse.Stream
       Elara.Parse.Type
       Prelude
       Print
