tidy up the monad stuff in Main

--- a/elara.cabal
+++ b/elara.cabal
@@ -59,6 +59,7 @@ library
       Elara.Parse.Primitives
       Elara.Parse.Stream
       Elara.Parse.Type
+      Polysemy.Maybe
       Polysemy.MTL
       Prelude
       Print
