--- a/elara.cabal
+++ b/elara.cabal
@@ -28,6 +28,7 @@ source-repository head
 library
   exposed-modules:
       Elara.Annotate.Shunt
+      Elara.AST.Desugared
       Elara.AST.Frontend
       Elara.AST.Frontend.Pretty.Unlocated
       Elara.AST.Frontend.StripLocation
@@ -38,6 +39,7 @@ library
       Elara.AST.Renamed
       Elara.AST.Select
       Elara.Data.Unique
+      Elara.Desugar
       Elara.Error
       Elara.Error.Codes
       Elara.Error.Effect
@@ -59,6 +61,7 @@ library
       Elara.Parse.Primitives
       Elara.Parse.Stream
       Elara.Parse.Type
+      Elara.Rename
       Polysemy.Maybe
       Polysemy.MTL
       Prelude
