--- a/elara.cabal
+++ b/elara.cabal
@@ -72,6 +72,7 @@ library
       Elara.TypeInfer.Environment
       Elara.TypeInfer.Error
       Elara.TypeInfer.Expr
+      Elara.TypeInfer.Finalise
       Elara.TypeInfer.GenerateEquations
       Elara.TypeInfer.SubstitutionMap
       Elara.TypeInfer.TypeVariables
