--- a/package.yaml
+++ b/package.yaml
@@ -33,6 +33,8 @@ dependencies:
   - polysemy
   - polysemy-plugin
   - mtl
+  - h2jvm
+  - binary
 
 ghc-options:
 - -Wall
@@ -75,6 +77,7 @@ library:
   source-dirs: src
   build-tools:
   - alex
+
 
 executables:
   elara:
