--- a/elara.cabal
+++ b/elara.cabal
@@ -39,7 +39,11 @@ library
       Elara.AST.Typed
       Elara.AST.Unlocated.Frontend
       Elara.AST.Unlocated.Typed
+      Elara.ASTToCore
+      Elara.ASTToCore.Error
       Elara.Compile
+      Elara.Core
+      Elara.Core.Module
       Elara.Data.Pretty
       Elara.Data.Unique
       Elara.Data.Unwrap
