--- a/elara.cabal
+++ b/elara.cabal
@@ -39,6 +39,7 @@ library
       Elara.AST.Typed
       Elara.AST.Unlocated.Frontend
       Elara.AST.Unlocated.Typed
+      Elara.AST.VarRef
       Elara.ASTToCore
       Elara.ASTToCore.Error
       Elara.Compile
