--- a/package.yaml
+++ b/package.yaml
@@ -33,7 +33,7 @@ dependencies:
   - polysemy
   - polysemy-plugin
   - mtl
-  - h2jvm
+  # - h2jvm
   - binary
 
 ghc-options:
@@ -62,7 +62,6 @@ ghc-options:
 
 default-extensions:
 - OverloadedStrings
-- OverloadedLists
 - OverloadedRecordDot
 - TypeFamilies
 - LambdaCase
