--- a/elara.cabal
+++ b/elara.cabal
@@ -187,6 +187,7 @@ test-suite elara-test
       Orphans
       Parse
       Parse.Common
+      Parse.Stream
       Paths_elara
   hs-source-dirs:
       test
